# hero_chassis_controller

./: CMakeLists.txt  LICENSE  README.md  hero_chassis_controller_plugins.xml  package.xml
cfg/: ChassisPidConfig.cfg  PID.cfg
config/: controller.yaml  controllers.yaml  kinematics.yaml
include/hero_chassis_controller/: Algorithm.hpp  RosPackageTemplate.hpp  chassis_controller.h  hero_chassis_controller.h  kinematicis_controller.h  kinematics_controller.h
launch/: chassis_controller.launch  hero_chassis_controller.launch  ros_package_template.launch  ros_package_template_overlying_params.launch  run_simulation_and_controller.launch
src/: Algorithm.cpp  RosPackageTemplate.cpp  chassis_controller.cpp  chassis_controller_node.cpp  hero_chassis_controller.cpp  kinematics_controller.cpp  ros_package_template_node.cpp
test/: AlgorithmTest.cpp
